--- a/client/src/views/Auth/Auth.css
+++ b/client/src/views/Auth/Auth.css
@@ -6,3 +6,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 850px) {
+  #auth-page {
+    height: 140vh;
+  }
+}
