--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -33,6 +33,7 @@
 #form-container input:focus {
   border: solid 1px #399cdf;
   box-shadow: 0 0 5px #399cdf;
+  outline: none;
 }
 #form-container h1 {
   margin-bottom: 10px;
