Completed frontend of Profile
Modified Employee model to add the courses in progress

Added starter code for additional components

Completed CourseCard, SkillBubble and some other components

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -20,6 +20,11 @@ nav {
   width: 22%;
 }
 
+.nav-items li {
+  font-weight: bold;
+  transition: all 0.19s ease-in-out;
+}
+
 .nav-items a {
   color: #000000;
 }
