--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@ body {
   font-family: Poppins;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f7f7f7;
 }
 
 .btn {
@@ -26,4 +27,8 @@ body {
 
 .btn:hover {
   transform: translateY(-3px);
+}
+
+.skills {
+  display: flex;
 }
