Added error handling for login:

--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -51,6 +51,20 @@
   height: 10vh;
 }
 
+.error {
+  color: #ca4148;
+  background-color: #ffbaba;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ca4148;
+  text-align: center;
+  margin-top: 10px;
+}
+
 @media screen and (max-width: 500px) {
   #form-container {
     width: 100%;
